--- a/html/admin/style.css
+++ b/html/admin/style.css
@@ -64,7 +64,6 @@ body {
     margin: 15px auto;
     width: 270px;
     color: #212227;
-    
 }
 
 button#login {
@@ -79,6 +78,7 @@ button#login {
     color: #fff;
     font-weight: 600;
     text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
 }
 
 button#login:hover {
@@ -144,7 +144,7 @@ button#login:hover {
     padding: 10px 0 10px 20px;
 }
 
-.logOut button, .logOut a {
+button, .logOut a {
     outline: none;
     border: none;
     background: #212227;
@@ -154,8 +154,8 @@ button#login:hover {
     color: #fff;
     font-weight: 600;
     text-transform: uppercase;
-    float: right;
     margin-left: 10px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .logOut a {
@@ -165,12 +165,11 @@ button#login:hover {
     padding: 10px 0px;
 }
 
-.logOut button:hover, .logOut a:hover {
+button:hover, .logOut a:hover {
     background: #5e6796;
     transition: 0.2s;
     cursor: pointer;
 }
-
 
 .nav {
     width: 85%;
@@ -221,13 +220,17 @@ button#login:hover {
     float: right;
 }
 
+.logOut button, .title button, .logOut a {
+    float: right;
+}
+
 .main h1 {
     font-weight: 700;
     color: #353b5b;
     margin: 0px;
     padding: 0px;
     width: 100%;
-    border-bottom: 4px #353b5b solid;
+
     text-transform: uppercase;
 }
 
@@ -241,106 +244,175 @@ button#login:hover {
     color: #353b5b;
 }
 
+.title {
+    border-bottom: 4px #353b5b solid;
+    margin-bottom: 20px;
+}
+
+.filters {
+    padding: 10px 0px;
+    text-align: center;
+}
+
+.filters input {
+    outline: none;
+    border: none;
+    background: #5e6796;
+    padding: 10px 20px;
+    border-radius: 30px;
+    margin: 0 20px 0 5px;
+    color: #fff;
+    width: 100px;
+}
+
+.filters form {
+    display: inline-block;
+}
+
 table {
     width: 100%;
 }
 
+#setSection input, #setUpdateSection input {
+    display: block;
+    outline: none;
+    border: none;
+    background: #efefef;
+    padding: 15px 20px;
+    border-radius: 10px;
+    margin: 5px 0;
+    color: #353b5b;
+    width: 300px;
+    border-bottom: solid 2px #d6d6d6;
+}
+
+#setSection input::placeholder, #setUpdateSection input::placeholder {
+    color: #9b9b9c;
+}
+
+.hiddenInput {
+    visibility: hidden;
+    width: 0px;
+    height: 0px; 
+}
+
+#setSection button, #setUpdateSection button {
+    width: 240px;
+    margin-left: 45px;
+    margin-top: 15px;
+}
+
+.profile_pic img {
+    width: 250px;
+}
+
+#response button {
+    width: 240px;
+    
+}
+
+td button {
+    width: 30px;
+    padding: 5px;
+    margin: 0px;
+}
+
 th {
-  color: #fff;
-  background: #353b5b;
-  border-bottom:4px solid #9ea7af;
-  border-right: 1px solid #343a45;
-  font-size:16px;
-  font-weight: 100;
-  padding:24px;
-  text-align:left;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  vertical-align:middle;
+    color: #fff;
+    background: #353b5b;
+    border-bottom:4px solid #9ea7af;
+    border-right: 1px solid #343a45;
+    font-size:16px;
+    font-weight: 100;
+    padding:24px;
+    text-align:left;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    vertical-align:middle;
 }
 
 th:first-child {
-  border-top-left-radius:3px;
+    border-top-left-radius:3px;
 }
- 
+
 th:last-child {
-  border-top-right-radius:3px;
-  border-right:none;
+    border-top-right-radius:3px;
+    border-right:none;
 }
-  
+
 tr {
-  border-top: 1px solid #C1C3D1;
-  border-bottom: 1px solid #C1C3D1;
-  color:#666B85;
-  font-size:16px;
-  font-weight:normal;
-  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+    border-top: 1px solid #C1C3D1;
+    border-bottom: 1px solid #C1C3D1;
+    color:#666B85;
+    font-size:16px;
+    font-weight:normal;
+    text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
 }
- 
+
 tr:hover td {
-  background:#5e6796;
-  color:#FFFFFF;
-/*  border-top: 1px solid #22262e;*/
+    background:#5e6796;
+    color:#FFFFFF;
+    /*  border-top: 1px solid #22262e;*/
 }
- 
+
 tr:first-child {
-  border-top:none;
+    border-top:none;
 }
 
 tr:last-child {
-  border-bottom:none;
+    border-bottom:none;
 }
- 
+
 tr:nth-child(odd) td {
-  background:#EBEBEB;
+    background:#EBEBEB;
 }
- 
+
 tr:nth-child(odd):hover td {
-  background:#4E5066;
+    background:#4E5066;
 }
 
 tr:last-child td:first-child {
-  border-bottom-left-radius:3px;
+    border-bottom-left-radius:3px;
 }
- 
+
 tr:last-child td:last-child {
-  border-bottom-right-radius:3px;
+    border-bottom-right-radius:3px;
 }
- 
+
 td {
-  background:#FFFFFF;
-  padding:20px;
-  text-align:left;
-  vertical-align:middle;
-  font-weight:300;
-  font-size:12px;
-  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-  border-right: 1px solid #C1C3D1;
+    background:#FFFFFF;
+    padding:20px;
+    text-align:left;
+    vertical-align:middle;
+    font-weight:300;
+    font-size:12px;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+    border-right: 1px solid #C1C3D1;
 }
 
 td:last-child {
-  border-right: 0px;
+    border-right: 0px;
 }
 
 th.text-left {
-  text-align: left;
+    text-align: left;
 }
 
 th.text-center {
-  text-align: center;
+    text-align: center;
 }
 
 th.text-right {
-  text-align: right;
+    text-align: right;
 }
 
 td.text-left {
-  text-align: left;
+    text-align: left;
 }
 
 td.text-center {
-  text-align: center;
+    text-align: center;
 }
 
 td.text-right {
-  text-align: right;
+    text-align: right;
 }
