--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 html, body { margin: 0px; padding: 0px; }
 
 body {
-    background: url(img/bg.png) repeat;
+    background: url(../img/bg.png) repeat;
     font-family: 'Poppins', sans-serif;
 }
 
